--- a/.storybook/style.css
+++ b/.storybook/style.css
@@ -1,10 +1,14 @@
+@import "@nimbus-ds/tokens/dist/css/variables.css";
+
 .darkClass .docs-story,
 .darkClass .sbdocs-wrapper {
-  background: rgba(51, 51, 51);
+  background: var(--color-sys-dark-neutral-surface);
 }
 
 .darkClass .sbdocs-preview {
-  background: rgba(153 153 153);
+  background: var(--color-sys-dark-neutral-background);
+  box-shadow: var(--shadow-dark-card);
+  border: 1px solid var(--color-sys-dark-neutral-surface-highlight);
 }
 
 .darkClass .sbdocs-title,
@@ -15,8 +19,8 @@
 }
 
 .darkClass .os-content {
-  background: rgba(51, 51, 51);
-  border: 1px solid rgba(153, 153, 153);
+  background: var(--color-sys-dark-neutral-surface);
+  border-bottom: 1px solid var(--color-sys-dark-neutral-surface-highlight);
 }
 
 .darkClass .os-content pre {
@@ -25,9 +29,9 @@
 
 .darkClass .docblock-code-toggle {
   color: #ffffff;
-  background: rgba(51, 51, 51);
-  border-top: 1px solid rgba(153, 153, 153);
-  border-left: 1px solid rgba(153, 153, 153);
+  background: var(--color-sys-dark-neutral-surface);
+  border-top: 1px solid var(--color-sys-dark-neutral-surface-highlight);
+  border-left: 1px solid var(--color-sys-dark-neutral-surface-highlight);
   border-radius: 0px 0 0 0;
 }
 
